finished home page

--- a/site_contents/00_home/content_home.html
+++ b/site_contents/00_home/content_home.html
@@ -1,4 +1,70 @@
-<html dir="rtl" lang="ar">
-<p><b>HELLO WORLD</b></p>
-</html>
- 
+
+<p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6>
+<p>
+<br>
+في وقتٍ ما أدركت أن ما أحتفظ به من متعلقات شخصية لابد وأن أفارقها. فلم أجد ضرورة في الاحتفاظ بها إلا ما أظن أنه قد ينفع. وعلى غرار قانون حرية المعلومات ورفع السرية الذي يسمح بتدوال الوثائق السرية إذا مر عليها ثلاثون عاماً، فوجدت أنه لا مانع من الإفصاح عن بعض ما في حوزتي من المستندات الشخصية وخصوصاً أنه على أية حال إنها لن تصبح في حوزتي في يوم ما كما ذكرت. فهي وإن كان مصيرها العدم، فإن أقصى ما أرجوه أن يمتد عمر النافع منها قدر المستطاع وأن يجعل الله فيها خيراً ونفعاً لكل عاقل من كل حدب وصوب.
+<br>
+لذلك فإن وجودها إلكترونياً قد يجعلها في مُكثٍ غير قليل. وهذا هو الغرض من وراء انشاء الصفحات التي بين أيدينا. بعض هذه الصفحات يحتوي على علوم قيمة، والبعض الآخر محتواياته لا تزيد عن كونها مجرد وسائل مساعدة لتحصيل بعض العلوم. حاولت تصنيف هذه الصفحات طبقاً للموضوع المتناول فيها، فكان هذا التصنيف كما يلي.
+<br>
+</p>
+<br>
+
+
+<div class="w3-container w3-teal">
+  <h1 class="w3-padding">محتويات الموقع</h1>
+</div>
+
+<!-- <div class="w3-row-padding w3-margin-top"> -->
+<div class="w3-container w3-margin">
+
+<div class="w3-third w3-right w3-margin">
+<div class="w3-card" >
+  <h4 class="w3-center">إسلامية</h4>
+  <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
+</div>
+</div>
+
+<div class="w3-third w3-right w3-margin">
+<div class="w3-card" >
+  <h4 class="w3-center">هندسية</h4>
+  <img src="../000/shots/engineering_formulation_interface.jpg" alt="Engineering" style="width:100%" class="w3-hover-opacity">
+</div>
+</div>
+
+<div class="w3-third w3-right w3-margin">
+<div class="w3-card" >
+  <h4 class="w3-center">لغوية</h4>
+  <img src="../000/shots/alphabet_icon_mask.png" alt="Language" style="width:100%" class="w3-hover-opacity">
+</div>
+</div>
+
+</div>
+
+<div class="w3-container w3-teal w3-margin-top">
+  <h3 id="about">الكاتب</h3>
+</div>
+    <div class="w3-container w3-white">
+      <p>
+من ناحية الوظيفة، فأعمل كمهندس إلكترونيات. غالب اهتماتي الأخرى متعلقة بالرسم والجرافيكس  وهو ما قد تلاحظ تأثيره في الملفات الملحقة في صفحات هذا الموقع.
+      </p>
+    </div>
+<div class="w3-display-container w3-teal w3-margin-bottom" style="height:10px;">
+</div>
+
+
+<!-- Contact Section -->
+<div class="w3-row-padding w3-margin-top">
+<div class="w3-container w3-third w3-padding-large">
+</div>
+  <div class="w3-container w3-third w3-padding-large w3-grey">
+    <h4 id="contact"><b>للتواصل</b></h4>
+    <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
+      <div class="w3-right w3-dark-grey">
+        <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
+        <p class="w3-padding">يمكنك التواصل عن طريق الايميل، يمكنك أن تجده في الملفات الملحقة في الصفحات الأخرى.</p>
+      </div>
+    </div>
+  </div>
+<div class="w3-container w3-third w3-padding-large">
+</div>
+  </div>
