adding Quran Tajweed page

--- a/000/home.html
+++ b/000/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
-<title>إرث عربي</title>
+<title>Arabic Legacy</title>
+<link rel="icon" href="../000/shots/arabiclegacy_logo.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../interface_css/w3.css">
@@ -17,17 +18,28 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
     <i class="fa fa-remove"></i>
     </a>
-    <img src="/w3images/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
-    <h4><b>إرث عربي</b></h4>
+    <img src="../000/shots/arabiclegacy_logo.png" style="width:45%;" class="w3-round"><br><br>
+    <h3><b>إرث عربي</b></h3>
     <p class="w3-text-grey">ملفات شخصية</p>
   </div>
   <div class="w3-bar-block">
     <div class="w3-right">
     
-    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-margin-left w3-right"></i><div class="w3-right-align">الرئيسية</div> </a> 
-    <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">             <i class="fa fa-user     fa-fw w3-margin-left w3-right"></i><div class="w3-right-align">مقدم المحتوى</div></a> 
-    <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">             <i class="fa fa-envelope fa-fw w3-margin-left w3-right"></i><div class="w3-right-align">للاتصال بنا</div></a>
+    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right-align">الرئيسية</div> </a> 
+    <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right-align">مقدم المحتوى</div></a> 
+    <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right-align">للاتصال بنا</div></a>
 
+ 
+<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
+  <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
+  <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
+  <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
+</button>
+<div id="demoAcc" class="w3-hide w3-white w3-container">
+   <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right-align">تجويد القرآن</div></a>  
+</div> 
 
       </div>
   </div>
@@ -45,10 +57,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <img src="../000/shots/self_arab_cover.png" style="width:100%;" class="w3-round">
 
 
-<p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6>
+<p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6></p>
 <p>
 <br>
-في وقتٍ ما أدركت أن ما أحتفظ به من متعلقات شخصية لابد وأن أفارقها. فلم أجد ضرورة في الاحتفاظ بها إلا ما أظن أنه قد ينفع. وعلى غرار قانون حرية المعلومات ورفع السرية الذي يسمح بتدوال الوثائق السرية إذا مر عليها ثلاثون عاماً، فوجدت أنه لا مانع من الإفصاح عن بعض ما في حوزتي من المستندات الشخصية وخصوصاً أنه على أية حال إنها لن تصبح في حوزتي في يوم ما كما ذكرت. فهي وإن كان مصيرها العدم، فإن أقصى ما أرجوه أن يمتد عمر النافع منها قدر المستطاع وأن يجعل الله فيها خيراً ونفعاً لكل عاقل من كل حدب وصوب.
+في وقتٍ ما أدركت أن ما أحتفظ به من متعلقات شخصية لابد وأن أفارقها. فلم أجد ضرورة في الاحتفاظ بها إلا ما أظن أنه قد ينفع. وعلى غرار قانون حرية المعلومات ورفع السرية الذي يسمح بتدوال الوثائق السرية إذا مر عليها ثلاثون عاماً، فوجدت أنه لا مانع من الإفصاح عن بعض ما لدي من المستندات الشخصية وخصوصاً أنه على أية حال إنها لن تصبح في حوزتي في يوم ما كما ذكرت. فهي وإن كان مصيرها العدم، فإن أقصى ما أرجوه أن يمتد عمر النافع منها قدر المستطاع وأن يجعل الله فيها خيراً ونفعاً لكل عاقل من كل حدب وصوب.
 <br>
 لذلك فإن وجودها إلكترونياً قد يجعلها في مُكثٍ غير قليل. وهذا هو الغرض من وراء انشاء الصفحات التي بين أيدينا. بعض هذه الصفحات يحتوي على علوم قيمة، والبعض الآخر محتواياته لا تزيد عن كونها مجرد وسائل مساعدة لتحصيل بعض العلوم. حاولت تصنيف هذه الصفحات طبقاً للموضوع المتناول فيها، فكان هذا التصنيف كما يلي.
 <br>
@@ -66,7 +78,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div class="w3-third w3-right w3-margin">
 <div class="w3-card" >
   <h4 class="w3-center">إسلامية</h4>
-  <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
+    <a href="../001/islamic_home.html">
+      <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
+    </a>
 </div>
 </div>
 
@@ -131,6 +145,18 @@ function w3_close() {
     document.getElementById("mySidebar").style.display = "none";
     document.getElementById("myOverlay").style.display = "none";
 }
+
+function myAccFunc(id) {
+  var x = document.getElementById(id);
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+    x.previousElementSibling.className += " w3-green";
+  } else { 
+    x.className = x.className.replace(" w3-show", "");
+    x.previousElementSibling.className = 
+    x.previousElementSibling.className.replace(" w3-green", "");
+  }
+}
 </script>
 
 
@@ -138,4 +164,5 @@ function w3_close() {
 
 
 </html>
+
 
