--- a/site_contents/00_home/content_home.html
+++ b/site_contents/00_home/content_home.html
@@ -1,8 +1,8 @@
 
-<p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6>
+<p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6></p>
 <p>
 <br>
-في وقتٍ ما أدركت أن ما أحتفظ به من متعلقات شخصية لابد وأن أفارقها. فلم أجد ضرورة في الاحتفاظ بها إلا ما أظن أنه قد ينفع. وعلى غرار قانون حرية المعلومات ورفع السرية الذي يسمح بتدوال الوثائق السرية إذا مر عليها ثلاثون عاماً، فوجدت أنه لا مانع من الإفصاح عن بعض ما في حوزتي من المستندات الشخصية وخصوصاً أنه على أية حال إنها لن تصبح في حوزتي في يوم ما كما ذكرت. فهي وإن كان مصيرها العدم، فإن أقصى ما أرجوه أن يمتد عمر النافع منها قدر المستطاع وأن يجعل الله فيها خيراً ونفعاً لكل عاقل من كل حدب وصوب.
+في وقتٍ ما أدركت أن ما أحتفظ به من متعلقات شخصية لابد وأن أفارقها. فلم أجد ضرورة في الاحتفاظ بها إلا ما أظن أنه قد ينفع. وعلى غرار قانون حرية المعلومات ورفع السرية الذي يسمح بتدوال الوثائق السرية إذا مر عليها ثلاثون عاماً، فوجدت أنه لا مانع من الإفصاح عن بعض ما لدي من المستندات الشخصية وخصوصاً أنه على أية حال إنها لن تصبح في حوزتي في يوم ما كما ذكرت. فهي وإن كان مصيرها العدم، فإن أقصى ما أرجوه أن يمتد عمر النافع منها قدر المستطاع وأن يجعل الله فيها خيراً ونفعاً لكل عاقل من كل حدب وصوب.
 <br>
 لذلك فإن وجودها إلكترونياً قد يجعلها في مُكثٍ غير قليل. وهذا هو الغرض من وراء انشاء الصفحات التي بين أيدينا. بعض هذه الصفحات يحتوي على علوم قيمة، والبعض الآخر محتواياته لا تزيد عن كونها مجرد وسائل مساعدة لتحصيل بعض العلوم. حاولت تصنيف هذه الصفحات طبقاً للموضوع المتناول فيها، فكان هذا التصنيف كما يلي.
 <br>
@@ -20,7 +20,9 @@
 <div class="w3-third w3-right w3-margin">
 <div class="w3-card" >
   <h4 class="w3-center">إسلامية</h4>
-  <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
+    <a href="../001/islamic_home.html">
+      <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
+    </a>
 </div>
 </div>
 
