--- a/000/home.html
+++ b/000/home.html
@@ -18,16 +18,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
     <i class="fa fa-remove"></i>
     </a>
-    <img src="../000/shots/arabiclegacy_logo.png" style="width:45%;" class="w3-round"><br><br>
+    <img src="../000/shots/arabiclegacy_logo.png" style="width:45%;" class="w3-round"><br>
     <h3><b>إرث عربي</b></h3>
     <p class="w3-text-grey">ملفات شخصية</p>
   </div>
   <div class="w3-bar-block">
     <div class="w3-right">
     
-    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right-align">الرئيسية</div> </a> 
-    <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right-align">مقدم المحتوى</div></a> 
-    <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right-align">للاتصال بنا</div></a>
+    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
+    <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">مقدم المحتوى</div></a> 
+    <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
 <button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
@@ -41,7 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <div class="w3-right-align">تجويد القرآن</div></a>  
 </div> 
 
-      </div>
+    </div>
   </div>
   <div class="w3-panel w3-large">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -52,9 +52,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <!-- Overlay effect when opening sidebar on small screens -->
 <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
+
+
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-right:20%">
-<img src="../000/shots/self_arab_cover.png" style="width:100%;" class="w3-round">
+<img src="../000/shots/self_arab_cover_lower.png" style="width:100%;" class="w3-round">
+
+<nav class="w3-bar w3-sand w3-border w3-padding-small" id="myHorzBar">
+    <img src="../000/shots/arabiclegacy_logo.png" style="width:5%;" class="w3-round w3-right w3-padding-small">
+    
+    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
+    <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">مقدم المحتوى</div></a> 
+    <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
+
+ 
+<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
+  <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
+  <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
+  <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
+</button>
+<div id="demoAcc" class="w3-hide w3-white w3-container">
+   <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right-align">تجويد القرآن</div></a>  
+</div> 
+
+</nav>
 
 
 <p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6></p>
