fix horizontal bar sublist

--- a/001/islamic_home.html
+++ b/001/islamic_home.html
@@ -35,10 +35,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
   <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
 </button>
-<div id="demoAcc" class="w3-hide w3-white w3-container">
+<div id="demoAcc" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right-align">تجويد القرآن</div></a>  
+     <div class="w3-right">تجويد القرآن</div></a>  
 </div> 
 
     </div>
@@ -66,15 +66,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
 </button>
-<div id="demoAcc" class="w3-hide w3-white w3-container">
+<div id="demoAcc2" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right-align">تجويد القرآن</div></a>  
+     <div class="w3-right">تجويد القرآن</div></a>  
 </div> 
 
 </nav>
