--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -4,15 +4,15 @@
 </header>
 </p>
 <br>
-<p>
-<h6>
-Please make sure that your browser supports PDF viewer
-Otherwise, you can download the pdf here
-<br>
-<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />
-</h6>
-</p>
-<br>
+
+<embed id = "DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
+
+
+<script>
+if (navigator.userAgent.match(/Mobile/)) {
+document.getElementById('DesktopView').src = '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />';
+}
+</script>
 
 <!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
 
