--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -86,12 +86,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 </p>
 <br>
 
-<embed id = "DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
+<embed id ="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
 
 
 <script>
 if (navigator.userAgent.match(/Mobile/)) {
-document.getElementById('DesktopView').src = '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />';
+document.getElementById('DesktopView').src = '<"https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true"';
 }
 </script>
 
