--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -5,12 +5,12 @@
 </p>
 <br>
 
-<embed id = "DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
+<embed id ="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
 
 
 <script>
 if (navigator.userAgent.match(/Mobile/)) {
-document.getElementById('DesktopView').src = '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />';
+document.getElementById('DesktopView').src = '<"https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true"';
 }
 </script>
 
