switch src in case of mobile

--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -10,7 +10,7 @@
 
 <script>
 if (navigator.userAgent.match(/Mobile/)) {
-document.getElementById('DesktopView').src = '<"https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true"';
+document.getElementById('DesktopView').src = 'https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true';
 }
 </script>
 
