--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -9,7 +9,7 @@
 
 
 <script>
-if (navigator.userAgent.match(/Mobile/)) {
+if (navigator.userAgent.match(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
 document.getElementById('DesktopView').src = 'https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true';
 }
 </script>
