switch src in case of mobile

--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -87,7 +87,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <br>
 <div id="demo2"></div>
 
-<embed id="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
+<embed id="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf"/> 
 
 
 <script>
