--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -6,7 +6,7 @@
 <br>
 <div id="demo2"></div>
 
-<embed id="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> 
+<embed id="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf"/> 
 
 
 <script>
