--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -13,7 +13,7 @@
 var txt2 = "";
 if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
 txt2 += "moi: note that u are using Mobile device";
-document.getElementById('DesktopView').src = 'https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true';
+document.getElementById("DesktopView").src = 'https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true';
 } else {
 txt2 += "moi: I cannot see any Mobile2";
 }
