--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -86,6 +86,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 </p>
 <br>
 <div id="demo2"></div>
+<div id="demo3"></div>
 
 <embed id="DesktopView" src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf"/> 
 
@@ -94,11 +95,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 var txt2 = "";
 if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
 txt2 += "moi: note that u are using Mobile device";
+var txt3 = document.getElementById("DesktopView").src;
 document.getElementById("DesktopView").src = 'https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true';
 } else {
+var txt3 = "gfsdgfd";
 txt2 += "moi: I cannot see any Mobile2";
 }
 document.getElementById("demo2").innerHTML = txt2;
+document.getElementById("demo3").innerHTML = txt3;
 </script>
 
 <!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
