switch src in case of mobile

--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -7,7 +7,7 @@
 <div id="demo2"></div>
 <div id="demo3"></div>
 
-<embed id="DesktopView" src="...."/> 
+<embed id="DesktopView" src=""/> 
 
 
 <script>
