--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -88,7 +88,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demo2"></div>
 <div id="demo3"></div>
 
-<embed id="DesktopView" src="...."/> 
+<embed id="DesktopView" src=""/> 
 
 
 <script>
