--- a/site_contents/01_01_tajweed/tajweed.html
+++ b/site_contents/01_01_tajweed/tajweed.html
@@ -6,23 +6,30 @@
 <br>
 <div id="demo2"></div>
 <div id="demo3"></div>
+<div id="demo5"></div>
 
-<embed id="DesktopView" src=""/> 
+<embed id="DesktopView" src="temp" /> 
 
 
 <script>
 var txt2 = "";
+var txt3 = "";
+var txt4 = "";
+var txt5 = "";
 if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
 txt2 += "moi: note that u are using Mobile device";
-var txt3 = document.getElementById("DesktopView").src;
-document.getElementById("DesktopView").src = 'https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true';
+txt4 += "https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true";
+txt3 += document.getElementById("DesktopView").src;
+txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />';
 } else {
-var txt3 = "gfsdgfd";
 txt2 += "moi: I cannot see any Mobile2";
-document.getElementById("DesktopView").src = '../site_contents/01_01_tajweed/DLV_Tajweed.pdf';
+txt4 += "../site_contents/01_01_tajweed/DLV_Tajweed.pdf";
+txt3 += "gfsdgfd";
+txt5 += '<embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" />';
 }
-document.getElementById("demo2").innerHTML = txt2;
-document.getElementById("demo3").innerHTML = txt3;
+document.getElementById("demo2").innerHTML += txt2;
+document.getElementById("demo3").innerHTML += txt3;
+document.getElementById("demo5").innerHTML += txt5;
 </script>
 
 <!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
