--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -89,32 +89,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demo3"></div>
 <div id="demo5"></div>
 
-<embed id="DesktopView" src="temp" /> 
 
 
 <script>
 var txt2 = "";
-var txt3 = "";
-var txt4 = "";
 var txt5 = "";
+
+txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf" class="w3-text-blue">هنا</a>';
+
 if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
-txt2 += "moi: note that u are using Mobile device";
-txt4 += "https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true";
-txt3 += document.getElementById("DesktopView").src;
-txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />';
+    txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf&embedded=true" />';
 } else {
-txt2 += "moi: I cannot see any Mobile2";
-txt4 += "../site_contents/01_01_tajweed/DLV_Tajweed.pdf";
-txt3 += "gfsdgfd";
-txt5 += '<embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" />';
+    txt5 += '<embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" />';
 }
+
 document.getElementById("demo2").innerHTML += txt2;
-document.getElementById("demo3").innerHTML += txt3;
-document.getElementById("DesktopView").src += txt4;
 document.getElementById("demo5").innerHTML += txt5;
 </script>
 
 <!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
+<!-- txt2 += '<a href="https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf" <p class="w3-text-blue">في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: هنا</p></a>'; -->
 
 
 
