adding paradigm page

--- a/001/islamic_home.html
+++ b/001/islamic_home.html
@@ -38,7 +38,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>  
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">النموذج المعرفي</div></a>  
 </div> 
 
     </div>
@@ -74,7 +76,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc2" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>  
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">النموذج المعرفي</div></a>  
 </div> 
 
 </nav>
@@ -85,16 +89,27 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 </h5>
 </p>
 <br>
+<div class="w3-container w3-margin-bottom"> 
 <ul class="w3-ul w3-right w3-sand" style="width:100%;">
   <a href="../002/tajweed.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
   </a>
 </ul>
+<ul class="w3-ul w3-right w3-sand" style="width:100%;">
+  <a href="../003/paradigm.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
+  </a>
+</ul>
+</div>
 <br>
 
 
 
 <!-- End of PAGE CONTENT -->
+<div class="w3-bar w3-light-grey"> 
+<div class="w3-bar-item">Arabic Legacy - All Rights Reserved</div>
+</div>
+
 </div>
 
 
