--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -38,7 +38,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>  
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">النموذج المعرفي</div></a>  
 </div> 
 
     </div>
@@ -74,19 +76,23 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc2" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>  
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">النموذج المعرفي</div></a>  
 </div> 
 
 </nav>
 
 <p id="tajweed_id">
 <header>
+<h2>
 تلخيص لأحكام تجويد القرآن الكريم
+</h2>
 </header>
 </p>
 <br>
 <div id="demo2"></div>
-<div id="demo3"></div>
+<br>
 <div id="demo5"></div>
 
 
@@ -108,11 +114,14 @@ document.getElementById("demo5").innerHTML += txt5;
 </script>
 
 <!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
-<!-- txt2 += '<a href="https://arabiclegacy.github.io/site_contents/01_01_tajweed/DLV_Tajweed.pdf" <p class="w3-text-blue">في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: هنا</p></a>'; -->
 
 
 
 <!-- End of PAGE CONTENT -->
+<div class="w3-bar w3-light-grey"> 
+<div class="w3-bar-item">Arabic Legacy - All Rights Reserved</div>
+</div>
+
 </div>
 
 
