--- a/003/paradigm.html
+++ b/003/paradigm.html
@@ -25,7 +25,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
   <div class="w3-bar-block">
     <div class="w3-right">
     
-    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
+    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_home_list_LIST_COLOR"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
     <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">مقدم المحتوى</div></a> 
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
@@ -38,7 +38,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">النموذج المعرفي</div></a>  
 </div> 
@@ -63,7 +63,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <nav class="w3-bar w3-sand w3-border w3-padding-small" id="myHorzBar">
     <img src="../000/shots/arabiclegacy_logo.png" style="width:5%;" class="w3-round w3-right w3-padding-small">
     
-    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
+    <a href="../000/home.html#root"    onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_home_list_LIST_COLOR"><i class="fa fa-home     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">الرئيسية</div> </a> 
     <a href="../000/home.html#about"   onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-user     fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">مقدم المحتوى</div></a> 
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
@@ -76,85 +76,45 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc2" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">النموذج المعرفي</div></a>  
 </div> 
 
 </nav>
 
-
-<p id="root"><h6><b>بسم الله الرحمن الرحيم</b></h6></p>
-<p>
-<br>
-في وقتٍ ما أدركت أن ما أحتفظ به من متعلقات شخصية لابد وأن أفارقها. فلم أجد ضرورة في الاحتفاظ بها إلا ما أظن أنه قد ينفع. وعلى غرار قانون حرية المعلومات ورفع السرية الذي يسمح بتدوال الوثائق السرية إذا مر عليها ثلاثون عاماً، فوجدت أنه لا مانع من الإفصاح عن بعض ما لدي من المستندات الشخصية وخصوصاً أنه على أية حال إنها لن تصبح في حوزتي في يوم ما كما ذكرت. فهي وإن كان مصيرها العدم، فإن أقصى ما أرجوه أن يمتد عمر النافع منها قدر المستطاع وأن يجعل الله فيها خيراً ونفعاً لكل عاقل من كل حدب وصوب.
-<br>
-لذلك فإن وجودها إلكترونياً قد يجعلها في مُكثٍ غير قليل. وهذا هو الغرض من وراء انشاء الصفحات التي بين أيدينا. بعض هذه الصفحات يحتوي على علوم قيمة، والبعض الآخر محتواياته لا تزيد عن كونها مجرد وسائل مساعدة لتحصيل بعض العلوم. حاولت تصنيف هذه الصفحات طبقاً للموضوع المتناول فيها، فكان هذا التصنيف كما يلي.
-<br>
+<p id="paradigm_id">
+<header>
+<h2>
+دليل عملي للنموذج المعرفي
+</h2>
+</header>
 </p>
 <br>
+<div id="demo2"></div>
+<br>
+<div id="demo5"></div>
 
 
-<div class="w3-container w3-teal">
-  <h1 class="w3-padding">محتويات الموقع</h1>
-</div>
 
-<!-- <div class="w3-row-padding w3-margin-top"> -->
-<div class="w3-container w3-margin">
+<script>
+var txt2 = "";
+var txt5 = "";
 
-<div class="w3-third w3-right w3-margin">
-<div class="w3-card" >
-  <h4 class="w3-center">إسلامية</h4>
-    <a href="../001/islamic_home.html">
-      <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
-    </a>
-</div>
-</div>
+txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="../site_contents/01_02_paradigm/cognitive_model.pdf" class="w3-text-blue">هنا</a>';
 
-<div class="w3-third w3-right w3-margin">
-<div class="w3-card" >
-  <h4 class="w3-center">هندسية</h4>
-  <img src="../000/shots/engineering_formulation_interface.jpg" alt="Engineering" style="width:100%" class="w3-hover-opacity">
-</div>
-</div>
+if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
+    txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_02_paradigm/cognitive_model.pdf&embedded=true" />';
+} else {
+    txt5 += '<embed src="../site_contents/01_02_paradigm/cognitive_model.pdf" width="800px" height="2100px" />';
+}
 
-<div class="w3-third w3-right w3-margin">
-<div class="w3-card" >
-  <h4 class="w3-center">لغوية</h4>
-  <img src="../000/shots/alphabet_icon_mask.png" alt="Language" style="width:100%" class="w3-hover-opacity">
-</div>
-</div>
+document.getElementById("demo2").innerHTML += txt2;
+document.getElementById("demo5").innerHTML += txt5;
+</script>
 
-</div>
+<!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
 
-<div class="w3-container w3-teal w3-margin-top">
-  <h3 id="about">الكاتب</h3>
-</div>
-    <div class="w3-container w3-white">
-      <p>
-من ناحية الوظيفة، فأعمل كمهندس إلكترونيات. غالب اهتماتي الأخرى متعلقة بالرسم والجرافيكس  وهو ما قد تلاحظ تأثيره في الملفات الملحقة في صفحات هذا الموقع.
-      </p>
-    </div>
-<div class="w3-display-container w3-teal w3-margin-bottom" style="height:10px;">
-</div>
-
-
-<!-- Contact Section -->
-<div class="w3-row-padding w3-margin-top">
-<div class="w3-container w3-third w3-padding-large">
-</div>
-  <div class="w3-container w3-third w3-padding-large w3-grey">
-    <h4 id="contact"><b>للتواصل</b></h4>
-    <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
-      <div class="w3-right w3-dark-grey">
-        <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p class="w3-padding">يمكنك التواصل عن طريق الايميل، يمكنك أن تجده في الملفات الملحقة في الصفحات الأخرى.</p>
-      </div>
-    </div>
-  </div>
-<div class="w3-container w3-third w3-padding-large">
-</div>
-  </div>
 
 
 <!-- End of PAGE CONTENT -->
