--- a/site_contents/01_00_islamic/islamic_home.html
+++ b/site_contents/01_00_islamic/islamic_home.html
@@ -4,10 +4,17 @@
 </h5>
 </p>
 <br>
+<div class="w3-container w3-margin-bottom"> 
 <ul class="w3-ul w3-right w3-sand" style="width:100%;">
   <a href="../002/tajweed.html">
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
   </a>
 </ul>
+<ul class="w3-ul w3-right w3-sand" style="width:100%;">
+  <a href="../003/paradigm.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
+  </a>
+</ul>
+</div>
 <br>
 
