--- a/003/paradigm.html
+++ b/003/paradigm.html
@@ -40,7 +40,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">النموذج المعرفي</div></a>  
+     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Quran Infographic</div></a>  
 </div> 
 
     </div>
@@ -78,7 +80,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">النموذج المعرفي</div></a>  
+     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Quran Infographic</div></a>  
 </div> 
 
 </nav>
