--- a/site_contents/01_00_islamic/islamic_home.html
+++ b/site_contents/01_00_islamic/islamic_home.html
@@ -15,6 +15,11 @@
     <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
   </a>
 </ul>
+<ul class="w3-ul w3-right w3-sand" style="width:100%;">
+  <a href="../004/qinfo.html">
+    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Quran Infographic</li>
+  </a>
+</ul>
 </div>
 <br>
 
