--- a/004/qinfo.html
+++ b/004/qinfo.html
@@ -30,7 +30,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -40,7 +40,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
+     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
@@ -70,7 +70,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
     <a href="../000/home.html#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-padding">                  <i class="fa fa-envelope fa-fw w3-padding-small w3-margin-left w3-right"></i><div class="w3-right">للاتصال بنا</div></a>
 
  
-<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding w3-text-teal" >
+<button  onclick="myAccFunc('demoAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_islamic_list_LIST_COLOR" >
   <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
   <a href="../001/islamic_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات إسلامية</div></a>
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
@@ -80,37 +80,43 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
+     <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
 
 </nav>
 
-<p id="islamic_home">
-<h5>
-هذا الجزء يحتوي على الملفات التالية
-</h5>
+<p id="qinfo_id">
+<header>
+<h2>
+Quran Infographic
+</h2>
+</header>
 </p>
 <br>
-<div class="w3-container w3-margin-bottom"> 
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../002/tajweed.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>تلخيص لأحكام تجويد القرآن الكريم</li>
-  </a>
-</ul>
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../003/paradigm.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>دليل عملي للنموذج المعرفي</li>
-  </a>
-</ul>
-<ul class="w3-ul w3-right w3-sand" style="width:100%;">
-  <a href="../004/qinfo.html">
-    <li><i class="fa fa-file-pdf-o w3-padding-small w3-right"></i>Quran Infographic</li>
-  </a>
-</ul>
-</div>
+<img src="../site_contents/01_03_Qinfo/Quran_Infographic.png" style="width:100%;" class="w3-round">
 <br>
+
+
+
+<script>
+var txt2 = "";
+var txt5 = "";
+
+txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="../site_contents/01_02_paradigm/cognitive_model.pdf" class="w3-text-blue">هنا</a>';
+
+if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
+    txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_02_paradigm/cognitive_model.pdf&embedded=true" />';
+} else {
+    txt5 += '<embed src="../site_contents/01_02_paradigm/cognitive_model.pdf" width="800px" height="2100px" />';
+}
+
+document.getElementById("demo2").innerHTML += txt2;
+document.getElementById("demo5").innerHTML += txt5;
+</script>
+
+<!-- <embed src="../site_contents/01_01_tajweed/DLV_Tajweed.pdf" width="800px" height="2100px" /> -->
 
 
 
