adding google analytics

--- a/001/islamic_home.html
+++ b/001/islamic_home.html
@@ -147,6 +147,16 @@ function myAccFunc(id) {
 }
 </script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174131781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || ;
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174131781-1');
+</script>
+
 
 </body>
 
