--- a/000/home.html
+++ b/000/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
+<head>
 <title>Arabic Legacy</title>
 <link rel="icon" href="../000/shots/arabiclegacy_logo.png">
 <meta charset="UTF-8">
@@ -10,6 +11,19 @@
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 </style>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174131781-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || ;
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-174131781-1');
+</script>
+
+
+</head>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
 <!-- Sidebar/menu -->
@@ -194,15 +208,7 @@ function myAccFunc(id) {
 }
 </script>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174131781-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || ;
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-174131781-1');
-</script>
 
 
 </body>
