--- a/site_contents/00_home/content_home.html
+++ b/site_contents/00_home/content_home.html
@@ -20,8 +20,8 @@
 <div class="w3-third w3-right w3-margin">
 <div class="w3-card" >
   <h4 class="w3-center">إسلامية</h4>
-    <a href="../001/islamic_home.html">
-      <img src="../000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
+    <a href="LEVEL/001/islamic_home.html">
+      <img src="LEVEL/000/shots/islamic_formulation_interface.jpg" alt="Islamic" style="width:100%; object-fit: cover;" class="w3-hover-opacity">
     </a>
 </div>
 </div>
@@ -29,14 +29,16 @@
 <div class="w3-third w3-right w3-margin">
 <div class="w3-card" >
   <h4 class="w3-center">هندسية</h4>
-  <img src="../000/shots/engineering_formulation_interface.jpg" alt="Engineering" style="width:100%" class="w3-hover-opacity">
+  <img src="LEVEL/000/shots/engineering_formulation_interface.jpg" alt="Engineering" style="width:100%" class="w3-hover-opacity">
 </div>
 </div>
 
 <div class="w3-third w3-right w3-margin">
 <div class="w3-card" >
   <h4 class="w3-center">لغوية</h4>
-  <img src="../000/shots/alphabet_icon_mask.png" alt="Language" style="width:100%" class="w3-hover-opacity">
+  <a href="LEVEL/03_00/language_home.html">
+    <img src="LEVEL/000/shots/alphabet_icon_mask.png" alt="Language" style="width:100%" class="w3-hover-opacity">
+  </a>
 </div>
 </div>
 
