--- a/002/tajweed.html
+++ b/002/tajweed.html
@@ -58,6 +58,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Quran Infographic</div></a>  
 </div> 
+ 
+<button  onclick="myAccFunc('languageAcc')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_language_list_LIST_COLOR" >
+  <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
+  <a href="../03_00/language_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات لغوية</div></a>
+  <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
+</button>
+<div id="languageAcc" class="w3-hide w3-container">
+   <a href="../03_01/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_synbucket_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Synbucket</div></a>  
+</div> 
 
     </div>
   </div>
@@ -97,6 +108,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
      <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Quran Infographic</div></a>  
+</div> 
+ 
+<button  onclick="myAccFunc('languageAcc2')" class="w3-bar-item w3-button w3-right w3-padding ACTIVE_language_list_LIST_COLOR" >
+  <i class="fa fa-book fa-fw w3-margin-left w3-padding-small w3-right"></i>
+  <a href="../03_00/language_home.html" onclick="w3_close()" class="w3-right w3-margin-left"> <div class="w3-right">ملفات لغوية</div></a>
+  <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
+</button>
+<div id="languageAcc2" class="w3-hide w3-container">
+   <a href="../03_01/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_synbucket_list_LIST_COLOR">
+     <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
+     <div class="w3-right">Synbucket</div></a>  
 </div> 
 
 </nav>
