--- a/03_01/synbucket.html
+++ b/03_01/synbucket.html
@@ -52,7 +52,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
@@ -65,7 +65,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
 </button>
 <div id="languageAcc" class="w3-hide w3-container">
-   <a href="../03_01/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_synbucket_list_LIST_COLOR">
+   <a href="../03_01/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Synbucket</div></a>  
 </div> 
@@ -103,7 +103,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 <div id="demoAcc2" class="w3-hide w3-container">
    <a href="../002/tajweed.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_tajweed_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
-     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
+     <div class="w3-right">تجويد القرآن</div></a>   <a href="../003/paradigm.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_paradigm_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">النموذج المعرفي</div></a>   <a href="../004/qinfo.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_qinfo_list_LIST_COLOR">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
@@ -116,24 +116,89 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
   <i class="fa fa-caret-down fa-fw w3-padding-small w3-right"></i>
 </button>
 <div id="languageAcc2" class="w3-hide w3-container">
-   <a href="../03_01/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right ACTIVE_synbucket_list_LIST_COLOR">
+   <a href="../03_01/synbucket.html" onclick="w3_close()" class="w3-bar-item w3-button w3-right w3-text-teal">
      <i class="fa fa-file-o fa-fw w3-padding-small w3-margin-left w3-right"></i>
      <div class="w3-right">Synbucket</div></a>  
 </div> 
 
 </nav>
 
-<p id="paradigm_id">
+<div>
+<p id="synbucket_id" class="w3-left" style="text-align: left; margin-left: 5%">
 <header>
-<h2>
-دليل عملي للنموذج المعرفي
+<h2 class="w3-left" style="text-align: left; margin-left: 5%">
+Synbucket for learning vocabularies
 </h2>
 </header>
 </p>
+</div>
+
 <br>
-<div id="demo2"></div>
+<div id="demo2" class="w3-left" style="text-align: left; margin-left: 5%" ></div>
 <br>
-<div id="demo5"></div>
+<div id="demo5" class="w3-left" style="text-align: left; margin-left: 5%" ></div>
+<br>
+
+<div class="w3-left" style="text-align: left; margin-left: 5%">
+Synbucket is a tool to add and rehearse synonyms. It can be used effectively for learning languages vocabularies. Its idea is to provide a way for quickly revising some synonyms that user adds himself to his words database.
+Therefore, it has basically two main functionalities: Adding Synonyms or Revising Synonyms.
+<br>
+<br>
+When user adds synonyms, it will be added to one associated CSV file called "Bucket.csv". When user revises synonyms, Synbucket will load words that have been saved in user database.
+Using Synbucket, user can be able to rehearse about 50 words in about 10 minutes (if he can recall it in enough time). When user gets familiar and certain about what he memorized in "Bucket.csv", he can archive these words 
+into another database called "Depot.csv". User has the option to rehearse words from either "Bucket.csv" or "Depot.csv". But when he adds new words, it will be added to "Bucket.csv" directly. To move words from "Bucket.csv" 
+into "Depot.csv", user has to click on 'archive' option
+<br>
+<br>
+WITHOUT "Bucket.csv" AND "Depot.csv" SYNBUCKET WILL NOT RUN, THESE TWO FILES ARE MUST TO EXIST WITH THE SAME DIRECTORY OF SYNBUCKET
+<br>
+<br>
+To have a review over what is saved in user database, there is one feature to review either "Bucket.csv" or "Depot.csv". There, the user can delete some words, order them, shuffle them
+<br>
+<br>
+</div>
+
+<div class="w3-left" style="text-align: left; margin-left: 5%">
+<h2>
+How to use Synbucket
+</h2>
+<br>
+Synbucket can run in two modes: either in Graphical User Interface (GUI) mode or Command Line Interface (CLI) mode. In GUI mode you will have leverage way for adding new words or revising stored words ad reviewing your database as well.
+Default execution assumes GUI mode is running
+<br>
+
+<h3>
+Running in Windows
+</h3>
+
+<br> 
+Synbucket can be invoked by running the executable file Synbucket.exe or from command terminal by simply typing
+<br>
+<code style="background-color: coral">Synbucket.exe</code>
+<br>
+If you need to rehearse or add words using CLI mode simply in a command terminal type
+<br>
+<code style="background-color: coral">Synbucket.exe CLI</code>
+<br>
+
+<h3>
+Running in Linux
+</h3>
+
+<br>
+Same as before, for running in GUI
+<br>
+<code style="background-color: coral">Synbucket</code>
+<br>
+For running in CLI
+<br>
+<code style="background-color: coral">Synbucket CLI</code>
+<br>
+<br>
+
+</div>
+
+
 
 
 
@@ -141,13 +206,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Amiri}
 var txt2 = "";
 var txt5 = "";
 
-txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="../site_contents/01_02_paradigm/cognitive_model.pdf" class="w3-text-blue">هنا</a>';
+txt2 += 'في حالة عدم توافر متصفح لملفات  MP4 يمكنك تحميل الملف من هذا الرابط: <a href="../site_contents/03_01/SynbucketVid.mp4" class="w3-text-blue">هنا</a>';
 
-if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
-    txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_02_paradigm/cognitive_model.pdf&embedded=true" />';
-} else {
-    txt5 += '<embed src="../site_contents/01_02_paradigm/cognitive_model.pdf" width="800px" height="2100px" />';
-}
+txt5 += '<video controls> <source src="../site_contents/03_01/SynbucketVid.mp4" type="video/mp4" style="width:100%"> </video>';
+
 
 document.getElementById("demo2").innerHTML += txt2;
 document.getElementById("demo5").innerHTML += txt5;
