--- a/site_contents/01_03_Qinfo/Qinfographic.html
+++ b/site_contents/01_03_Qinfo/Qinfographic.html
@@ -15,7 +15,7 @@ Quran Infographic
 var txt2 = "";
 var txt5 = "";
 
-txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="../site_contents/01_02_paradigm/cognitive_model.pdf" class="w3-text-blue">هنا</a>';
+txt2 += 'في حالة عدم توافر متصفح لملفات  PDF يمكنك تحميل الملف من هذا الرابط: <a href="LEVEL/site_contents/01_02_paradigm/cognitive_model.pdf" class="w3-text-blue">هنا</a>';
 
 if (navigator.userAgent.match(/Mobile|Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/)) {
     txt5 += '<embed src="https://docs.google.com/viewer?url=https://arabiclegacy.github.io/site_contents/01_02_paradigm/cognitive_model.pdf&embedded=true" />';
